--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
             <div class="header__menu">
                 Меню
                 <button class="header__burger-btn">
-                    <svg width="25" height="14" viewBox="0 0 25 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1 1H13" stroke="#151515" stroke-width="1.2" stroke-linecap="round" />
-                        <path d="M1 7H24" stroke="#151515" stroke-width="1.2" stroke-linecap="round" />
-                        <path d="M1 13H24" stroke="#151515" stroke-width="1.2" stroke-linecap="round" />
+                    <svg width="19" height="11" viewBox="0 0 19 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1 0.75H10" stroke="#151515" stroke-width="0.9" stroke-linecap="round" />
+                        <path d="M1 5.25H18.25" stroke="#151515" stroke-width="0.9" stroke-linecap="round" />
+                        <path d="M1 9.75H18.25" stroke="#151515" stroke-width="0.9" stroke-linecap="round" />
                     </svg>
                 </button>
             </div>
@@ -724,7 +724,7 @@
                 </div>
             </div>
         </section>
-        <section class="player-section">
+        <!-- <section class="player-section">
             <div class="player player-section__player">
                 <button class="player__toggle-btn hidden" type="button">
                     <svg width="243" height="243" viewBox="0 0 243 243" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -734,7 +734,7 @@
                 </button>
                 <video autoplay muted src="./assets/video/test.mp4" class="player__video"></video>
             </div>
-        </section>
+        </section> -->
         <section class="offers-section">
             <div class="wrapper offers-section__wrapper">
                 <div class="hgroup offers-section__hgroup">
