pixel perfect main

--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="player-section">
+        <section class="player-section">
             <div class="player player-section__player">
                 <button class="player__toggle-btn hidden" type="button">
                     <svg width="243" height="243" viewBox="0 0 243 243" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -734,7 +734,7 @@
                 </button>
                 <video autoplay muted src="./assets/video/test.mp4" class="player__video"></video>
             </div>
-        </section> -->
+        </section>
         <section class="offers-section">
             <div class="wrapper offers-section__wrapper">
                 <div class="hgroup offers-section__hgroup">
@@ -998,7 +998,7 @@
                 <div class="request-section__content">
                     <div class="request-section__col">
                         <h2 class="subheading request-section__heading">
-                            Оставить заявку
+                            Оставить заявку <br>
                             для обсуждения проекта
                         </h2>
                         <div class="contacts-group request-section__contacts-group">
@@ -1047,7 +1047,7 @@
                             </div>
                             <input type="email" placeholder="Почта" class="form__input">
                         </div>
-                        <div class="form__group">
+                        <div class="form__group form__group--last">
                             <h5 class="form__heading">
                                 О проекте
                             </h5>
