--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 </ul>
             </nav>
             <div class="header__menu toggleMobileMenu">
-                Меню
+                <span class="header__menu-text">Меню</span>
                 <button class="header__burger-btn">
                     <svg width="19" height="11" viewBox="0 0 19 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 0.75H10" stroke="#151515" stroke-width="0.9" stroke-linecap="round" />
