--- a/index.html
+++ b/index.html
@@ -1478,7 +1478,7 @@
     <script src="./scripts/popup.js"></script>
     <script src="./scripts/smoothScroll.js"></script>
     <script src="./scripts/validateForm.js"></script>
-    <script src="./scripts/mobileMenu.js"></script>t
+    <script src="./scripts/mobileMenu.js"></script>
 </body>
 
 </html>
