--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
                 </p>
             </div>
         </section>
-        <section id="projects" class="project-section tab-section">
-            <div class="wrapper project-section__wrapper">
-                <div class="hgroup project-section__hgroup">
-                    <h2 class="subheading project-section__heading">Наши проекты</h2>
-                    <a href="#" id="togglePopup" class="main-link main-link--blue project-section__main-link">
+        <section id="projects" class="projects-section tab-section">
+            <div class="wrapper projects-section__wrapper">
+                <div class="hgroup projects-section__hgroup">
+                    <h2 class="subheading projects-section__heading">Наши проекты</h2>
+                    <a href="#" id="togglePopup" class="main-link main-link--blue projects-section__main-link">
                         Связаться с нами
                         <div class="main-link__icon">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -233,9 +233,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="project-section__content">
-                    <div class="project-section__sidebar">
-                        <ul class="tab-list tab-list--col project-section__tab-list">
+                <div class="projects-section__content">
+                    <div class="projects-section__sidebar">
+                        <ul class="tab-list tab-list--col projects-section__tab-list">
                             <li class="tab-list__item tab-list__item--active">
                                 <button type="button" class="tab-list__item-btn">
                                     Брендинг
@@ -260,7 +260,7 @@
                                 <button type="button" class="tab-list__item-btn">СММ</button>
                             </li>
                         </ul>
-                        <a href="#" class="btn btn--icon project-section__btn">
+                        <a href="#" class="btn btn--icon projects-section__btn">
                             <p class="btn__label">все работы</p>
                             <div class="btn__icon">
                                 <svg width="17" height="16" viewBox="0 0 17 16" fill="none"
@@ -271,9 +271,9 @@
                             </div>
                         </a>
                     </div>
-                    <div class="page-list project-section__page-list">
+                    <div class="page-list projects-section__page-list">
                         <div class="page-list__page page-list__page--active">
-                            <div class="grid-list project-section__grid-list">
+                            <div class="grid-list projects-section__grid-list">
                                 <div class="grid-list__row">
                                     <div class="grid-list__col">
                                         <a href="#" class="grid-list__col-header">
@@ -379,7 +379,7 @@
                             </div>
                         </div>
                         <div class="page-list__page">
-                            <div class="grid-list project-section__grid-list">
+                            <div class="grid-list projects-section__grid-list">
                                 <div class="grid-list__row">
                                     <div class="grid-list__col">
                                         <a href="#" class="grid-list__col-header">
@@ -485,7 +485,7 @@
                             </div>
                         </div>
                         <div class="page-list__page">
-                            <div class="grid-list project-section__grid-list">
+                            <div class="grid-list projects-section__grid-list">
                                 <div class="grid-list__row">
                                     <div class="grid-list__col">
                                         <a href="#" class="grid-list__col-header">
@@ -591,7 +591,7 @@
                             </div>
                         </div>
                         <div class="page-list__page">
-                            <div class="grid-list project-section__grid-list">
+                            <div class="grid-list projects-section__grid-list">
                                 <div class="grid-list__row">
                                     <div class="grid-list__col">
                                         <a href="#" class="grid-list__col-header">
@@ -697,7 +697,7 @@
                             </div>
                         </div>
                         <div class="page-list__page">
-                            <div class="grid-list project-section__grid-list">
+                            <div class="grid-list projects-section__grid-list">
                                 <div class="grid-list__row">
                                     <div class="grid-list__col">
                                         <a href="#" class="grid-list__col-header">
@@ -804,7 +804,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" class="btn btn--icon project-section__mobile-btn">
+                <a href="#" class="btn btn--icon projects-section__mobile-btn">
                     <span class="btn__label">
                         все работы
                     </span>
