--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -23,35 +23,8 @@
                         Проекты
                     </a>
                 </li>
-                <li class="mobile-menu__nav-list-item submenuToggle">
-                    <div class="mobile-menu__nav-list-item-top">
-                        Услуги
-                        <div class="mobile-menu__nav-list-item-chevron">
-                            <svg width="12" height="9" viewBox="0 0 12 9" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path d="M6 9L0.803847 -2.51245e-08L11.1962 8.834e-07L6 9Z" fill="white" />
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="mobile-menu__nav-list-item-submenu submenu">
-                        <a href="#" class="mobile-menu__nav-list-item-submenu-link">
-                            Брендинг
-                        </a>
-                        <a href="#" class="mobile-menu__nav-list-item-submenu-link">
-                            UX/UI-дизайн
-                        </a>
-                        <a href="#" class="mobile-menu__nav-list-item-submenu-link">
-                            Разработка
-                        </a>
-                        <a href="#" class="mobile-menu__nav-list-item-submenu-link">
-                            Реклама, SEO
-                        </a>
-                        <a href="#" class="mobile-menu__nav-list-item-submenu-link">
-                            СММ
-                        </a>
-                    </div>
-
-
+                <li class="mobile-menu__nav-list-item">
+                     <a href="#" class="mobile-menu__nav-list-item-link">Услуги</a>
                 </li>
                 <li class="mobile-menu__nav-list-item">
                     <a href="#" class="mobile-menu__nav-list-item-link">
