added item page

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -597,6 +597,7 @@
     <script src="../scripts/popup.js"></script>
     <script src="../scripts/smoothScroll.js"></script>
     <script src="../scripts/mobileMenu.js"></script>
+    <script src="../scripts/validateForm.js"></script>
 </body>
 
 </html>
