--- a/pages/project.html
+++ b/pages/project.html
@@ -2137,5 +2137,6 @@
     <script src="../scripts/smoothScroll.js"></script>
     <script src="../scripts/mobileMenu.js"></script>
     <script src="../scripts/tabs.js"></script>
+    <script src="../scripts/validateForm.js"></script>
   </body>
 </html>
