--- a/pages/s-item.html
+++ b/pages/s-item.html
@@ -282,6 +282,9 @@
         </section>
         <section class="project-section">
             <div class="wrapper project-section__wrapper">
+                <h2 class="project-section__heading">
+                    Кейсы
+                </h2>
                 <div class="project-section__table">
                     <a href="#" class="project-section__table-link-wrapper">
                         <div class="project-section__table-cell">
